# volumetric-path-tracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  camera.h  cmake_install.cmake  image.cpp  image.h  parser.cpp  parser.h  pathtracer.cpp  ray.h  scene.cpp  scene.h  util.cpp  util.h
acceleration/: aabb.h  acceleration.h  barr_grid.h  geometry_list.h  sah_bvh.cpp  sah_bvh.h
bxdf/: brdf.h  hg_phase.h  lambertian.h  light.h  marschner_hair.cpp  marschner_hair.h
dep/: stb_image_write.h  threadpool.h
geometry/: curve.cpp  curve.h  geometry.h  sphere.cpp  sphere.h
integrator/: integrator.h  naive_path_integrator.h  normal_integrator.h  uv_integrator.h
light/: background_light.h  light.h  shape_light.h
medium/: grid.cpp  grid.h  medium.h
scenes/: furball_scene.json  hair_scene.json
scenes/curly/: scene.json
scenes/curves/: hair.pbrt  scene.json
scenes/diffuse_spheres/: scene.json
scenes/fog/: scene.json
scenes/four_curls/: scene.json
scenes/reverse_side/: scene.json
scenes/side/: scene.json
scenes/side_old/: scene.json
scenes/top/: hair.pbrt  scene.json
